completed the basic admin workflow of on boarding a customer and establishing the home to owner relationship

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="js/services/UserService.js"></script>
     <script src="js/services/AuthService.js"></script>
     <script src="js/controllers/users/UsersController.js"></script>
+    <script src="js/controllers/home/HomesController.js"></script>
 
 
     
