--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-resource.min.js"></script>
     <script src="/bower_components/angular-aria/angular-aria.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/services/FirebaseImgService.js"></script>
     <script src="js/services/CrudService.js"></script>
     <script src="js/services/HomeService.js"></script>
     <script src="js/services/UserService.js"></script>
